Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Automatically_Merge_and_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Merge_and_Deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Merge and Deploy</label>
    <type>Checkbox</type>
</CustomField>