Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <inlineHelpText>Git branch linked to the source environment.</inlineHelpText>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>