Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Commits_Ahead__c.field-meta.xml
<CustomField>
    <fullName>Commits_Ahead__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commits Ahead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>