Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Connection_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Connection_Behavior__c</fullName>
    <formula>If( NOT(ISBLANK( Connection_Behavior_Override__c )), Connection_Behavior_Override__c,  Destination_Environment__r.Connection_Behavior__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connection Behavior</label>
    <type>Text</type>
</CustomField>