Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Connection_Behavior_Override__c.field-meta.xml
<CustomField>
    <fullName>Connection_Behavior_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field manages override of Connection Behavior on Pipeline Connection basis</description>
    <label>Connection Behavior Override</label>
    <referenceTo>Connection_Behavior__c</referenceTo>
    <relationshipLabel>Pipeline Connections</relationshipLabel>
    <relationshipName>Pipeline_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>