Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Deployment_Flow__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Flow__c</fullName>
    <label>Pipeline</label>
    <referenceTo>Deployment_Flow__c</referenceTo>
    <relationshipLabel>Pipeline Connections</relationshipLabel>
    <relationshipName>Deployment_Flow_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>