Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Destination_Environment__c.field-meta.xml
<CustomField>
    <fullName>Destination_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipName>Deployment_Flow_Steps1</relationshipName>
    <type>Lookup</type>
</CustomField>