Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Enable_as_Scratch_Org_Destination__c.field-meta.xml
<CustomField>
    <fullName>Enable_as_Scratch_Org_Destination__c</fullName>
    <label>Enable as Scratch Org Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default DX Target</fullName>
            </value>
            <value>
                <fullName>DX Target</fullName>
            </value>
            <value>
                <fullName>DX Patch Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>