Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Last_Merge_Base__c.field-meta.xml
<CustomField>
    <fullName>Last_Merge_Base__c</fullName>
    <description>Last date and time when the source and target branch were in Sync (no commits ahead or behind).</description>
    <inlineHelpText>Last date and time when the source and target branch were in Sync (no commits ahead or behind).</inlineHelpText>
    <label>Last Merge Base</label>
    <type>DateTime</type>
</CustomField>