Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Last_Merge_CBM_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Merge_CBM_Sync__c</fullName>
    <description>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the destination environment.</description>
    <inlineHelpText>Last date and time when the CBM Sync button was clicked to merge and deploy changes to the destination environment.</inlineHelpText>
    <label>Last Merge CBM Sync</label>
    <type>DateTime</type>
</CustomField>