Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Pull_Auto_Resolved_Files__c.field-meta.xml
<CustomField>
    <fullName>Pull_Auto_Resolved_Files__c</fullName>
    <description>List of conflicted files auto resolved by Copado when merging the destination branch into the source branch.</description>
    <inlineHelpText>List of conflicted files auto resolved by Copado when merging the destination branch into the source branch.</inlineHelpText>
    <label>Pull Auto Resolved Files</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>