Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipName>Deployment_Flow_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>