Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Sync_Merge_State__c.field-meta.xml
<CustomField>
    <fullName>Sync_Merge_State__c</fullName>
    <label>Sync Merge State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Needs recalculating</fullName>
                <default>true</default>
                <label>Needs recalculating</label>
            </value>
            <value>
                <fullName>Recalculating</fullName>
            </value>
            <value>
                <fullName>In sync</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Validation errors</fullName>
            </value>
            <value>
                <fullName>Syncing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>