Dummy_Package_for_scratch_org/main/default/objects/Deployment_Flow_Step__c/fields/Test_Level__c.field-meta.xml
<CustomField>
    <fullName>Test_Level__c</fullName>
    <inlineHelpText>Recommended Test Level: &quot;Run Local Tests&quot;</inlineHelpText>
    <label>Test Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Test Run</fullName>
                <default>true</default>
                <label>No Test Run</label>
            </value>
            <value>
                <fullName>Run Specified Tests</fullName>
            </value>
            <value>
                <fullName>Run Local Tests</fullName>
            </value>
            <value>
                <fullName>Run All Tests In Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>